--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@
   }
 }
 
+header {
+  color: rgb(var(--foreground-rgb));
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background-color: rgb(var(--background-rgb));
