--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-rgb: 39, 39, 39;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,12 +14,29 @@
   }
 }
 
-header {
-  color: rgb(var(--foreground-rgb));
-}
 
 body {
   color: rgb(var(--foreground-rgb));
   background-color: rgb(var(--background-rgb));
+  display: flex;
+  justify-content: center;
 }
 
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  top: 0;
+  color: rgb(var(--foreground-rgb));
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  max-width: 1200px;
+  flex-grow: 1;
+}
