--- a/app/list/components/MoviePostCard.module.css
+++ b/app/list/components/MoviePostCard.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    margin: 50px;
+    margin-top: 25px;
     border-radius: 25px;
     background-color: #373737;
     flex-grow: 1;
