--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@ header {
 main {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  margin: 100px 50px 0px 50px;
   max-width: 1200px;
   max-height: 80vh;
   overflow-x: auto;
