--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,6 @@
   }
 }
 
-
 body {
   color: rgb(var(--foreground-rgb));
   background-color: rgb(var(--background-rgb));
@@ -24,12 +23,12 @@ body {
 
 header {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   position: fixed;
   width: 100%;
-  height: 100px;
-  top: 0;
+  height: auto;
   color: rgb(var(--foreground-rgb));
 }
 
