--- a/app/components/SignUpButton.module.css
+++ b/app/components/SignUpButton.module.css
@@ -1,10 +1,17 @@
 .button {
-    background-color: #373737;
-    border: 15px #373737 solid;
-    border-radius: 15px;
-    margin-right: 25px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  background-color: var(--color-alt-bg);
+  padding: 15px;
+  border-radius: 15px;
+  margin-right: 15px;
 }
 
 .button:hover {
-    color: #272727;
+  color: var(--color-bg);
+}
+
+.icon {
+  width: 15px;
 }
