--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,8 @@ main {
   display: flex;
   align-self: center;
   flex-direction: column;
-  margin-top: 25px;
+  padding: 25px 25px 0px 25px;
+  width: 100%;
   max-width: 1200px;
 }
 
