--- a/app/register/components/SignUpForm.module.css
+++ b/app/register/components/SignUpForm.module.css
@@ -1,50 +1,49 @@
 .container {
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
 }
 
 .inputContainer > input {
-    outline: none;
-    background-color: #373737;
-    border-bottom: solid 5px #272727;
-    color: white;
+  outline: none;
+  background-color: var(--color-alt-bg);
+  border-bottom: solid 5px var(--color-bg);
+  color: white;
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    border: 15px solid #373737;
-    border-radius: 15px;
-    background-color: #373737;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 15px;
+  border-radius: 15px;
+  background-color: var(--color-alt-bg);
 }
 
 .form > h1 {
-    border-radius: 15px;
-    background-color: #272727;
-    text-align: center;
+  border-radius: 15px;
+  background-color: var(--color-bg);
+  text-align: center;
 }
 
 .buttonContainer {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .buttonContainer > a,
 .buttonContainer > button {
-    background-color: #272727;
-    border: 8px solid #272727;
-    border-radius: 8px;
+  background-color: var(--color-bg);
+  padding: 8px;
+  border-radius: 8px;
 }
 
 .buttonContainer > button:hover {
-    background-color: lime;
-    border-color: lime;
+  background-color: lime;
+  border-color: lime;
 }
 
-
 .buttonContainer > a:hover {
-    background-color: red;
-    border-color: red;
+  background-color: red;
+  border-color: red;
 }
