--- a/app/globals.css
+++ b/app/globals.css
@@ -11,15 +11,13 @@
   --color-placeholder: #8d7f6f;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-bg: #272727;
-    --color-alt-bg: #373737;
-    --color-text: #ffffff;
-    --color-alt-text: #000000;
-    --color-dark-text: #1c1c1c;
-    --color-placeholder: #9ca3af;
-  }
+[data-theme="dark"] {
+  --color-bg: #272727;
+  --color-alt-bg: #373737;
+  --color-text: #ffffff;
+  --color-alt-text: #000000;
+  --color-dark-text: #1c1c1c;
+  --color-placeholder: #9ca3af;
 }
 
 body {
