--- a/app/list/[movieId]/components/SubtitleList.module.css
+++ b/app/list/[movieId]/components/SubtitleList.module.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 15px;
+  margin-bottom: 15px;
   gap: 15px;
 }
 
@@ -38,7 +39,7 @@
   position: relative;
   padding: 15px;
   border-radius: 15px;
-  margin: 15px 45px 0px 45px;
+  margin: 15px 15px 0px 15px;
   background-color: var(--color-alt-bg);
 }
 
