--- a/app/list/components/MoviePostCard.module.css
+++ b/app/list/components/MoviePostCard.module.css
@@ -1,6 +1,5 @@
 .container {
   display: flex;
-  flex-wrap: wrap;
   margin-top: 25px;
   border-radius: 25px;
   background-color: var(--color-alt-bg);
@@ -26,13 +25,15 @@
 
 .container h2 {
   margin-top: 15px;
-  font-size: 25px;
+  font-size: 20px;
 }
 .text {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
-  max-width: 300px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 80%;
 }
 
 .star {
@@ -47,9 +48,12 @@
   color: red;
 }
 
-.downloadCount {
-  display: flex;
-  justify-content: end;
-  margin-right: 20px;
-  font-size: 25px;
+@media (max-width: 690px) {
+  .starRating {
+    display: none;
+  }
+
+  .downloadCount {
+    display: none;
+  }
 }
