--- a/app/globals.css
+++ b/app/globals.css
@@ -37,21 +37,23 @@ main {
 }
 
 .title {
-  font-size: 35px;
+  align-self: center;
+  font-size: 20px;
 }
 
 .buttonContainer {
   display: flex;
   flex-wrap: wrap;
+  align-self: center;
   gap: 15px;
   margin-top: 15px;
 }
 
 .button {
-  font-size: 25px;
+  font-size: 20px;
   background-color: var(--color-alt-bg);
-  padding: 15px;
-  border-radius: 15px;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .button:hover {
