--- a/app/list/[movieId]/page.module.css
+++ b/app/list/[movieId]/page.module.css
@@ -12,7 +12,8 @@
 .titleContainer {
   display: flex;
   justify-content: space-between;
-  font-size: 35px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .image {
